fix: Problem with RHC fixed nav on mobile Safari

--- a/sass/theme/_content.scss
+++ b/sass/theme/_content.scss
@@ -45,8 +45,21 @@
 }
 
 // fixed left/right hand side column
-	.content-fix.fixed {
-		.content-fix-wrap {
+	.content-fix-scroll {
+		margin-right: ($grid-gutter * -1);
+		margin-left: ($grid-gutter * -1);
+		overflow: hidden;
+		padding-right: $grid-gutter;
+		padding-left: $grid-gutter;
+		.content-fix.fixed & {
+			position: fixed;
+				top: ($line-height * 2);
+				bottom: 0;
+		}
+	}
+
+	.content-fix-wrap {
+		.content-fix.fixed & {
 			overflow-x: hidden;
 			overflow-y: auto;
 			padding-right: ($grid-gutter * 2);
@@ -59,19 +72,6 @@
 			-webkit-overflow-scrolling: touch;
 			-ms-overflow-style: -ms-autohiding-scrollbar;
 		}
-		.content-fix-scroll {
-			position: fixed;
-				top: ($line-height * 2);
-				bottom: 0;
-		}
-	}
-
-	.content-fix-scroll {
-		margin-right: ($grid-gutter * -1);
-		margin-left: ($grid-gutter * -1);
-		overflow: hidden;
-		padding-right: $grid-gutter;
-		padding-left: $grid-gutter;
 	}
 
 	.row-fix {
